fix bug making checkboxes invisible on ios webkit browsers

--- a/frontend/src/inputStyles.css
+++ b/frontend/src/inputStyles.css
@@ -36,7 +36,7 @@ button {
 }
 
 input[type="checkbox"] {
-    accent-color: white;
+    accent-color: black;
     width: 1.2rem;
     height: 1.2rem;
     margin-right: 0.5rem;
